--- a/src/Sulu/Bundle/MediaBundle/Resources/translations/sulu/backend.nl.xlf
+++ b/src/Sulu/Bundle/MediaBundle/Resources/translations/sulu/backend.nl.xlf
@@ -84,7 +84,7 @@
             </trans-unit>
             <trans-unit id="90a3272459ba0f52ef7a4d3c0298d5c" resname="sulu.collections.delete-collection">
                 <source>sulu.collections.delete-collection</source>
-                <target>Verwijder connectie</target>
+                <target>Collectie verwijderen</target>
             </trans-unit>
             <trans-unit id="80a3272459ba0f52ef7a4d3c0298d5f" resname="media-selection.new-collection">
                 <source>media-selection.new-collection</source>
@@ -144,7 +144,7 @@
             </trans-unit>
             <trans-unit id="243d99ff2f64652633a5ca2169f22260" resname="sulu.collection.move.overlay-title">
                 <source>sulu.collection.move.overlay-title</source>
-                <target>Verplaatsen collectie</target>
+                <target>Collectie verplaatsen</target>
             </trans-unit>
             <trans-unit id="243d99ff2f64652633a5ca2169f22345" resname="media-selection.overlay.all-medias">
                 <source>media-selection.overlay.all-medias</source>
